# embedded_soko_jacob

./: README.md
1-concurrency/: ;  Cargo.toml
1-concurrency/src/: main.rs
2-performance/: Cargo.toml
2-performance/benches/: render_small.rs
2-performance/configurations/: dev.yml  reference.yml
2-performance/src/: lib.rs  main.rs
2-performance/src/datastructure/: intersection.rs  mod.rs
2-performance/src/datastructure/bvh/: mod.rs  node.rs
2-performance/src/generator/: basic.rs  threaded.rs
2-performance/src/raytracer/: mstracer.rs
2-performance/src/shader/: mcshader.rs
2-performance/src/util/: mod.rs  outputbuffer.rs  vector.rs
3-embedded/: Cargo.toml
3-embedded/embedded-code/: Cargo.toml
3-embedded/embedded-code/src/: main.rs  message.rs  mutex.rs  uart.rs
3-embedded/embedded-code/src/drawing/: font.rs  screen.rs
3-embedded/message/: Cargo.toml
3-embedded/message/src/: lib.rs
3-embedded/runner/: Cargo.toml
3-embedded/runner/src/: main.rs
