[package]
name = "rusttracer"
version = "0.1.0"
edition = "2021"

[dependencies]
bmp = "0.5"
tobj = "0.1.12"
once_cell = "1.15"
image = "0.24"
log = "0.4"
simple-logging = "2.0"
rand = { version = "0.7", features = ["small_rng"] }
serde_yaml = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "render_small"
harness = false

[profile.release]
debug = true
opt-level = 3
lto = true
